[package]
name = "nfs-rs"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
byteorder = "1.5.0"
bytes = "1.10.1"
nfs4 = { version = "0.1.0", path = "./nfs4p1-rs/nfs4" }
nfs4_client = { version = "0.1.0", path = "./nfs4p1-rs/nfs4_client" }
nix = "0.29.0"
path-clean = "1.0.1"
rand = "0.9.1"
thiserror = "2.0.12"
url = "2.5.4"
xdr-codec = "0.4.4"
