[package]
name = "nfs-rs"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

nfs4 = { git="https://github.com/scontain-gmbh/nfs4p1-rs", rev="8aed62e2da397a2d80f4ae8bcdf452fb5fa1eff3" }
nfs4_client = { git="https://github.com/scontain-gmbh/nfs4p1-rs", rev="8aed62e2da397a2d80f4ae8bcdf452fb5fa1eff3" }
nix = "0.29.0"
path-clean = "1.0.1"
url = "2.5.4"
xdr-codec = "0.4.4"
